--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "git+https://github.com/apollographql/apollo-client.git#v3.0.0-alpha.3",
     "@types/react": "^16.9.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "babel-core": "^6.26.3",
     "babel-plugin-styled-components": "^1.10.0",
+    "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.6",
